# DISSCO

./: BUILDING_LINUX.md  BUILDING_MACOS.md  BUILDING_WINDOWS.md  CMakeLists.txt  Doxyfile  Make-Portable-for-Windows.bat  Make-Portable-for-Windows.ps1  Section.cpp  StandardHeaders.h  index.html
.github/workflows/: build.yml  docs.yml  release.yml
CMOD/: CMakeLists.txt
CMOD/src/: Bottom.cpp  Bottom.h  FileValue.cpp  Libraries.h  Matrix.h  ModParser.h  Modifier.cpp  Modifier.h  NotationScore.h  Output.h  Patter.h  Rational.h  Section.cpp  Sieve.h  SignalHandlers.h  Tempo.h  TimeSpan.h  Utilities.cpp  Utilities.h  piece-experimental.cpp  tables.h
Documents/: tutorial_score.md
LASS/src/: AllPassFilter.cpp  AllPassFilter.h  AuWriter.cpp  BiQuadFilter.cpp  BiQuadFilter.h  DynamicVariable.h  DynamicVariableSequence.cpp  DynamicVariableSequence.h  DynamicVariableSequenceIterator.cpp  DynamicVariableSequenceIterator.h  Envelope.cpp  Envelope.h  EnvelopeIterator.cpp  EnvelopeIterator.h  EnvelopeLibrary.cpp  EnvelopeLibrary.h  Filter.cpp  Filter.h  Interpolator.cpp  Interpolator.h  InterpolatorTypes.cpp  LASS.h  LPCombFilter.cpp  LPCombFilter.h  LowPassFilter.cpp  LowPassFilter.h  MarkovModel.h  MultiPan.cpp  MultiPan.h  MultiTrack.cpp  MultiTrack.h  Partial.cpp  Partial.h  ProbabilityEnvelope.h  Reverb.cpp  Reverb.h  Score.cpp  Score.h  Semaphore.h  Sound.cpp  (+5 more)
LASSIE/: CMakeLists.txt
LASSIE/src/: lassie.hpp  (+1 more)
cmake-modules/: FindSndFile.cmake
external-libs/: CMakeLists.txt
external-libs/pugixml/: CMakeLists.txt
latest/: index.html
packaging/: Packaging.cmake
(+5684 files in other folders)
